src/test/ui/half-open-range-patterns/range_pat_interactions3.stderr
error[E0658]: half-open range patterns are unstable
  --> $DIR/range_pat_interactions3.rs:18:17
   |
LL |             y @ ..-7 => assert_eq!(y, -8),
   |                 ^^^^
   |
   = note: see issue #67264 <https://github.com/rust-lang/rust/issues/67264> for more information
   = help: add `#![feature(half_open_range_patterns)]` to the crate attributes to enable

error[E0658]: inline-const in pattern position is experimental
  --> $DIR/range_pat_interactions3.rs:14:20
   |
LL |             y @ 0..const { 5 + 1 } => assert_eq!(y, 5),
   |                    ^^^^^
   |
   = note: see issue #76001 <https://github.com/rust-lang/rust/issues/76001> for more information
   = help: add `#![feature(inline_const_pat)]` to the crate attributes to enable

error[E0658]: exclusive range pattern syntax is experimental
  --> $DIR/range_pat_interactions3.rs:10:17
   |
LL |             1 | -3..0 => first_or.push(x),
   |                 ^^^^^
   |
   = note: see issue #37854 <https://github.com/rust-lang/rust/issues/37854> for more information
   = help: add `#![feature(exclusive_range_pattern)]` to the crate attributes to enable

error[E0658]: exclusive range pattern syntax is experimental
  --> $DIR/range_pat_interactions3.rs:12:18
   |
LL |             y @ (0..5 | 6) => or_two.push(y),
   |                  ^^^^
   |
   = note: see issue #37854 <https://github.com/rust-lang/rust/issues/37854> for more information
   = help: add `#![feature(exclusive_range_pattern)]` to the crate attributes to enable

error[E0658]: exclusive range pattern syntax is experimental
  --> $DIR/range_pat_interactions3.rs:14:17
   |
LL |             y @ 0..const { 5 + 1 } => assert_eq!(y, 5),
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #37854 <https://github.com/rust-lang/rust/issues/37854> for more information
   = help: add `#![feature(exclusive_range_pattern)]` to the crate attributes to enable

error[E0658]: exclusive range pattern syntax is experimental
  --> $DIR/range_pat_interactions3.rs:18:17
   |
LL |             y @ ..-7 => assert_eq!(y, -8),
   |                 ^^^^
   |
   = note: see issue #37854 <https://github.com/rust-lang/rust/issues/37854> for more information
   = help: add `#![feature(exclusive_range_pattern)]` to the crate attributes to enable

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
